<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1"
    android:background="@color/window_back"
    android:orientation="vertical"
    android:padding="10dp">

    <View
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/review_text"
        android:textColor="@color/input_color"
        android:textSize="14sp"
        android:textStyle="normal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/rateApp"
        android:textSize="16sp"
        android:layout_margin="10dp"
        android:textStyle="normal" />

    <RatingBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:rating="5"
        tools:ignore="ContentDescription" />

    <Button
        android:id="@+id/btnRate"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/button_back"
        android:text="@string/rateNow"
        android:textColor="@color/white_text"
        android:textSize="14sp"
        android:textStyle="normal" />

    <View
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1" />
</LinearLayout>